# TaskManager

./: CMakeLists.txt  README.md
src/: main.cpp
src/in_out/: in_out.cpp  in_out.hpp
src/tasks/: subtask.cpp  subtask.hpp  task.cpp  task.hpp  task_base.cpp  task_base.hpp  tasks_list.cpp  tasks_list.hpp
src/ui/: ui.cpp  ui.hpp
